syntax = "proto3";

package catalog;

option go_package = "./proto/pb";

// Ortak Tipler
message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message Order {
  string id = 1; // UUID
  int32 product_id = 2;
  int32 quantity = 3;
  string created_at = 4;
}

// Servis Tanımları
service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
}

// Request/Response Mesajları
message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message ProductResponse {
  Product product = 1;
}

message GetProductRequest {
  int32 id = 1;
}

message CreateOrderRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message OrderResponse {
  Order order = 1;
  string status = 2;
}